--- a/homework.html
+++ b/homework.html
@@ -2,7 +2,7 @@
 
 <body>
     <script>
-        for (var i = 100; i >= -100; i -= i 5) {
+        for (var i = 100; i >= -100; i = i - 5) {
             console.log(i);
         }
 
